GPC/tests/examples/fail/errArith6.gpc

void GPRM::Test::errArith6() {
    return 3 != 3.0;
}


